--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-project",
-  "homepage": "https://ritik-yadav15.github.io/newProject",
+  "homepage": "https://ritik-yadav15.github.io/Todo/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
